# CGpractice

./: contributors.txt  dragon.ogv  out.ogv  sak338_cs432_researchpapersummary.pptx
CS430_CG/honors/: .Makefile.swp  Makefile  demo.ogv  honors.cpp  vshdr.glsl
CS430_CG/honors_project/: 1.ogv  2.ogv  Makefile  fshdr.glsl  honors  honors.cpp
CS430_CG/hw1/: CG_ec  CG_ec.cpp  Line.cpp  Polygon.h  README  Transformation.cpp  Transformation.h  makefile  out.xpm  out4.xpm  out7.xpm
CS430_CG/hw3/: CG_hw3  Line.cpp  Line.h  (+13 more)
CS431_Rendering/hw1/: CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  Polygon.cpp  Polygon.h  README  Ray.cpp  SMFModel.cpp  SMFModel.h  Sphere.cpp  Sphere.h  Vector4D.cpp  Vector4D.h  makefile  sak338_hw1.cpp
CS431_Rendering/hw2/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Model.h  Polygon.cpp  Polygon.h  README  Ray.h  SMFModel.cpp  SMFModel.h  Sphere.cpp  Sphere.h  Vector4D.cpp  Vector4D.h  makefile  sak338_hw2.cpp
CS432_InteractiveCG/: bunny.ogv
OO/: Circle.cpp  README  Shape.cpp  hw2.cpp
extra/: Makefile  fireapp.cpp  sak338_proposal.tex
hw1/: Makefile  red_triangle_works.cpp
hw2/: Circle.cpp  Makefile  Shape.cpp  Square.cpp  Square.h  Triangle.cpp  fshader21.glsl  hw2  hw2-part2.cpp  hw2.cpp  other_shapes.cpp
hw3/: Circle.cpp  hw3  hw3.cpp  vshader21.glsl
hw4/: README  hw4
hw5/: Makefile  README  fshdrcube.glsl  hw5  hw5.cpp  vshdr.glsl
hw6/: hw6  hw6.cpp
hw7/: fshdr.glsl  hw7.cpp  vshdr.glsl
hw8/: README  vshdr.glsl
hw9/: Makefile  README  fshdr2.glsl  hw9-1  hw9-2.cpp  vshdr1.glsl  vshdr2.glsl
(+226 files in other folders)
